重构Ingredient (#376)